--- a/contact.html
+++ b/contact.html
@@ -6,13 +6,13 @@
 	<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 </head>
 <body>
 <div class="container">
 	<nav class="navbar navbar-default">
-		<div class="container-fluid">
-			<div class="navbar-header">
+		<div class="container-fluid navbg">
+			<div class="navbar-header nav">
 				
 				<a class="navbar-brand" href="#">Kamoltip Cardenas</a>
 			</div>
@@ -66,7 +66,7 @@
 				  <div class="panel-heading">
 				    <h3 class="panel-title">Connect With Me</h3>
 				  </div>
-				  <div class="panel-body">
+				  <div class="panel-body link">
 				    
 				    <div class="row">
 				    	<div class="col-xs-3 col-md-3">
@@ -91,6 +91,14 @@
 
 			</div>
 		</div>
+	<div class="container footerbox">
+		 <div class="panel-footer footer">
+		 <p>&#9400 Kamoltip Cardenas</p>
+		 </div>	 	  
+		
+	</div>
+
+
 	</div>
 </body>
 </html>
