--- a/portfolio.html
+++ b/portfolio.html
@@ -108,9 +108,9 @@
 			</div>
 
 			<div class="container footerbox">
-
 			  <div class="panel-footer footer">
 			  <p>&#9400 Kamoltip Cardenas</p>
+		  	  </div>
 		  	</div>
 		  	
 </div>
