--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
 			<div class="col-xs-8 col-md-8">
 				
 				<div class="row">
-					<div class="col-xs-8 col-md-8">
+					<div class="col-xs-8 col-md-8 storybox">
 					<h1>Contact</h1>
 					<hr>
 						<form>
