--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
 	 			<li><a href="contact.html">contact</a></li>
 	 		</ul>
 		</div>
-</div>	
 	</nav>
+</div>	
 	<div class="container">
 		<div class="row">
-			<div class="col-xs-8 col-md-8">
+			<div class="col-xs-8 col-md-8 storybox">
 				<h1>About Me</h1>
 				<hr>
 				<div class="row">
@@ -85,11 +85,11 @@
 	</div>
 	
 	
-	<div class="container footerbox">
-		 <div class="panel-footer footer">
-		 <p>&#9400 Kamoltip Cardenas</p>
-	</div>	 	  
-	
+		<div class="container footerbox">
+			 <div class="panel-footer footer">
+			 <p>&#9400 Kamoltip Cardenas</p>
+			</div>	 	  
+		</div>
 
 </div>
 	
